@@ -3,6 +3,8 @@ dh-python (1.20131021-2) UNRELEASED; urgency=low
   * dh_python3, dh_pypy: add support for debian/package.pyremove files
   * dh_python3: add multiarch tuples to all already tagged extensions if
     when more than one Python 3 version is supported (closes: 733128)
+  * Make sure only first line is taken into account while checking shebangs
+    (closes: 732308)
 
  -- Piotr Ożarowski <piotr@debian.org>  Tue, 05 Nov 2013 22:57:20 +0100
 
